Changed appbundle to restbundle and added controllers for rest implementation

--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -13,6 +13,7 @@
     - xdebug
     - apcu
     - pdo
+    - zip
 
 - name: install php{{ php.version }}-fpm
   apt: name=php{{ php.version }}-fpm state=present
