--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "php": ">=7.1.0",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "elasticsearch/elasticsearch": "^5.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "league/flysystem": "^1.0",
         "mongodb/mongodb": "^1.1",
