--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "RestBundle\\": "src/RestBundle"
+            "RestBundle\\": "src/RestBundle",
+            "MainBundle\\": "src/MainBundle"
         },
         "classmap": [
             "app/AppKernel.php",
