Moved some of the datastructure to make it more drive by the domain.

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "RestBundle\\": "src/RestBundle",
-            "MainBundle\\": "src/MainBundle"
+            "MainBundle\\": "src/MainBundle",
+            "Document\\": "src/Document"
         },
         "classmap": [
             "app/AppKernel.php",
