💫 Added flysystem integration and deepened rest of system

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,9 @@
         "elasticsearch/elasticsearch": "^5.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "league/flysystem": "^1.0",
+        "league/flysystem-gridfs": "^1.0",
         "mongodb/mongodb": "^1.1",
+        "ramsey/uuid": "^3.7",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
