--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,10 @@ composer.lock
 !/var/cache
 /var/cache/*
 !var/cache/.gitkeep
+!/var/files/
+/var/files/*
+!/var/files/.gitkeep
 !/var/logs
-!/var/files
 /var/logs/*
 !var/logs/.gitkeep
 !/var/sessions
