📖 Added REST API Docs

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -31,3 +31,7 @@ document.file:
     resource: "@FileBundle/Controller"
     type:     annotation
     prefix:   /document
+
+NelmioApiDocBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix:   /api/doc
