--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "league/flysystem": "^1.0",
         "league/flysystem-gridfs": "^1.0",
         "mongodb/mongodb": "^1.1",
+        "nelmio/api-doc-bundle": "^2.13",
         "ramsey/uuid": "^3.7",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
