🛠 Fixed ansible provisioning for mongo

--- a/ansible/roles/mongodb/tasks/main.yml
+++ b/ansible/roles/mongodb/tasks/main.yml
@@ -7,3 +7,7 @@
 
 - name: Start mongod
   service: name=mongod state=started
+
+- name: Ensure mongo launches on boot
+  become: yes
+  command: systemctl enable mongod.service
