🛠 Added playbook retry to gitignore and added phpcurl to php task

--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -5,6 +5,7 @@
   apt: name=php{{ php.version }}-{{ item }} state=present
   with_items:
     - json
+    - curl
     - xml
     - mbstring
     - intl
